k8s/dev/namespace.yaml
# yaml-language-server: $schema=kubernetes
apiVersion: v1
kind: Namespace
metadata:
  name: python-dynamo-lab
  labels:
    kubernetes.io/metadata.name: python-dynamo-lab
    app.kubernetes.io/managed-by: "helm"
    environment: "dev"
    team: "platform"
