k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-dynamo-lab-app
  namespace: python-dynamo-lab
  labels:
    app: python-dynamo-lab-app
    app.kubernetes.io/name: python-dynamo-lab-app
    app.kubernetes.io/version: "1.0.0"
spec:
  replicas: 2
  serviceAccountName: python-dynamo-lab-sa
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 1000
    fsGroup: 1000
  topologySpreadConstraints:
    - maxSkew: 1
      topologykey: topology.kubernetes.io/zone
      whenUnsatisfiable: ScheduleAnyway
      labelSelector:
        matchLabels:
          app: python-dynamo-lab-app
  selector:
    matchLabels:
      app: python-dynamo-lab-app
  template:
    metadata:
      labels:
        app: python-dynamo-lab-app
    spec:
      containers:
        - name: python-dynamo-lab-app
          image: #ecr-image-path
          ports:
            - containerPort: 8001
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          startupProbe:
            httpGet:
              path: /health
              port: 8001
            failureThreshold: 10
            periodSeconds: 5
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
